[package]
name = "xil-sys"
version = "0.1.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@tuni.fi>"]
description = "FFI bindings to a custom built libxil."
edition = "2021"
readme = "README.md"

links = "xil_sf"

[lib]
name = "xil_sys"
path = "lib.rs"

[build-dependencies]
cc = "1.0.73"
bindgen = "0.61.0"
itertools = "0.10.5"
glob = "0.3.0"

[dependencies]
# Aliases for C-types.
cty = "0.2.2"
