[package]
name = "xil-sys"
version = "0.2.0"
authors = [
    "Henri Lunnikivi <henri.lunnikivi@tuni.fi> Roni Hämäläinen <roni.hamalainen@tuni.fi>",
]
description = "FFI bindings to a custom built libxil."
#edition = "2018"
edition = "2021"
readme = "README.md"

links = "xil_sf"

[lib]
name = "xil_sys"
path = "lib.rs"

[build-dependencies]
bindgen = "*"
#bindgen = "0.55.1"
#bindgen = "0.59.1"
#bindgen = "0.61.0"

cc = "*"
glob = "*"
itertools = "*"

#cc = "1.0.73"
#glob = "0.3.0"
#itertools = "0.10.5"

[dependencies]
# Aliases for C-types.
# cty = "0.2.2"

cty = "*"
