# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "xil-sys"
version = "0.2.0"
authors = [
    "Henri Lunnikivi <henri.lunnikivi@tuni.fi>",
    "Roni Hämäläinen <roni.hamalainen@tuni.fi>",
]
edition = "2021"
description = "FFI bindings to a custom built libxil."
readme = "README.md"
repository = "https://github.com/RHamalainen/xil-custom-sys"
license-file = "LICENSE.md"
build = "build.rs"
links = "xil_sf"

[lib]
name = "xil_sys"
path = "lib.rs"

[dependencies]
cty = "0.2.2"

[build-dependencies]
cc = "1.0.76"
glob = "0.3.0"
bindgen = "0.61.0"
itertools = "0.10.5"
